Add cute piggy bank icons for PWA (favicon, 192x192, 512x512)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="apple-mobile-web-app-title" content="FlexBook">
     <title>FlexBook - Professional Household Finance</title>
     <link rel="manifest" href="/inaeFlexbook/manifest.json">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%234f46e5' width='192' height='192'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='100' font-weight='bold' fill='white' font-family='Arial'>FB</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%234f46e5' width='192' height='192'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' font-size='100' font-weight='bold' fill='white' font-family='Arial'>FB</text></svg>">
+    <link rel="icon" type="image/svg+xml" href="/inaeFlexbook/favicon.svg">
+    <link rel="apple-touch-icon" href="/inaeFlexbook/icon-192.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
